su18/lab/lab01.push

--- a/materials/su18/lab/lab01/lab01.ipynb
+++ b/materials/su18/lab/lab01/lab01.ipynb
@@ -6,20 +6,20 @@
    "source": [
     "# Lab 1: Expressions\n",
     "\n",
-    "Welcome to Data Science 8: Foundations of Data Science!  Each week you will complete a lab assignment like this one.  You can't learn technical subjects without hands-on practice, so labs are an important part of the course.\n",
+    "Welcome to Data Science 8: Foundations of Data Science!  Each week you will complete two lab assignments like this one.  You can't learn technical subjects without hands-on practice, so labs are an important part of the course.\n",
     "\n",
     "Before we get started, there are some administrative details.\n",
     "\n",
     "Labs are required. There are two ways to receive credit for each lab.\n",
     "\n",
-    "1. (The normal way) Come to your lab section and work on the lab as directed. Before you leave, you need to **submit the lab and have a staff member check you off to confirm** that you came to lab section and attempted to make progress while you were there. You do not need to finish the lab or answer every question correctly to receive full credit. However, you do need to try; that's why we check you off. Expect to discuss your progress briefly with a staff member before they will check you off. The lab must be submitted by Friday night, even if it is incomplete, to get credit for attending.\n",
+    "1. (The normal way) Come to your lab section and work on the lab as directed. Before you leave, you need to **submit the lab and have a staff member check you off to confirm** that you came to lab section and attempted to make progress while you were there. You do not need to finish the lab or answer every question correctly to receive full credit. However, you do need to try; that's why we check you off. Expect to discuss your progress briefly with a staff member before they will check you off. The lab must be submitted at the end of your lab section, even if it is incomplete, to get credit for attending.\n",
     "\n",
     "    \n",
-    "2. (The hard way) Lab assignments will be posted Sunday night. If you complete the entire lab so that all tests pass and submit it by 9:59 AM on Wednesday, then you don't need to physically attend lab for the rest of the week.\n",
+    "2. (The hard way) Lab assignments will be posted Saturday and Monday nights. If you complete the entire lab so that all tests pass and submit it by 11:59 PM on the day AFTER it is released (Sunday and Wednesday), then you don't need to physically attend the lab for which you completed the lab assignment.\n",
     "\n",
     "Collaborating on labs is more than okay -- it's encouraged! You should rarely be stuck for more than a few minutes on questions in labs, so ask a neighbor or an instructor for help. (Explaining things is beneficial, too -- the best way to solidify your knowledge of a subject is to explain it.) Please don't just share answers, though.\n",
     "\n",
-    "You can read more about [course policies](http://data8.org/sp18/policies.html) on the [course website](http://data8.org/sp18).\n",
+    "You can read more about [course policies](http://data8.org/su18/policies.html) on the [course website](http://data8.org/su18/).\n",
     "\n",
     "#### Today's lab\n",
     "\n",
