--- a/materials/su18/lab/lab03/lab03.ipynb
+++ b/materials/su18/lab/lab03/lab03.ipynb
@@ -604,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 5.4.** Find the average rating for movies released before the yaer 2000 and the average rating for movies released in the year 2000 or after for the movies in `imdb`.\n",
+    "**Question 5.4.** Find the average rating for movies released before the year 2000 and the average rating for movies released in the year 2000 or after for the movies in `imdb`.\n",
     "\n",
     "*Hint*: Think of the steps you need to do (take the average, find the ratings, find movies released in 20th/21st centuries), and try to put them in an order that makes sense."
    ]
@@ -612,14 +612,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "before_2000 = ...\n",
     "after_or_in_2000 = ...\n",
-    "print(\"Average before 2000 rating:\", after_or_in_2000)\n",
+    "print(\"Average before 2000 rating:\", before_2000)\n",
     "print(\"Average after or in 2000 rating:\", after_or_in_2000)"
    ]
   },
@@ -1066,7 +1064,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1080,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
