su18/project/project2.push

--- a/materials/su18/project/project2/project2.ipynb
+++ b/materials/su18/project/project2/project2.ipynb
@@ -748,7 +748,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "manual_problem_id": "disease_1_5"
+    "deletable": false,
+    "manual_problem_id": "disease_4_1_5"
    },
    "source": [
     "*Write your answer here, replacing this text.*"
@@ -803,6 +804,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
+    "deletable": false,
     "manual_problem_id": "disease_q_4_1_6"
    },
    "outputs": [],
@@ -821,6 +823,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": false,
     "manual_problem_id": "disease_4_1_7"
    },
    "source": [
@@ -860,6 +863,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": false,
     "manual_problem_id": "diesease_4_2_1"
    },
    "source": [
@@ -904,6 +908,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": false,
     "manual_problem_id": "disease_4_2_3"
    },
    "source": [
@@ -1024,6 +1029,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": false,
     "manual_problem_id": "disease_4_2_7"
    },
    "source": [
@@ -1186,7 +1192,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "manual_problem_id": "disease_5_4"
+    "deletable": false,
+    "manual_problem_id": "disease_5_5"
    },
    "source": [
     "*Write your answer here, replacing this text.*"
