--- a/materials/su18/lab/lab08/lab08.ipynb
+++ b/materials/su18/lab/lab08/lab08.ipynb
@@ -427,7 +427,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "for_assignment_type": "student"
+   },
    "source": [
     "**Conclusions:** "
    ]
@@ -733,7 +735,6 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
