--- a/materials/su18/hw/hw11/hw11.ipynb
+++ b/materials/su18/hw/hw11/hw11.ipynb
@@ -101,7 +101,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 1\n",
+    "\n",
     "Write a function called `residuals`.  It should take a single argument, a table.  It should first compute the slope and intercept of the regression line that predicts the second column of that table (accessible as `tbl.column(1)`) using the first column (`tbl.column(0)`).  `residuals` should return an array containing the *residuals* for that regression line. Recall that residuals are given by \n",
     "\n",
     "$$residual = observed \\ value - regression \\ estimate$$\n",
@@ -139,7 +141,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 2\n",
+    "\n",
     "Make a scatter plot of the residuals for the Boston housing dataset against crime rate. Crime rate should be on the horizontal axis."
    ]
   },
@@ -159,7 +163,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 3\n",
+    "\n",
     "Does the plot of residuals look roughly like a formless cloud? Or is there some kind of pattern in them? Are they centered around 0?"
    ]
   },
@@ -175,7 +181,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 4\n",
+    "\n",
     "Does it seem like a linear model is appropriate for describing the relationship between crime and median home value? Explain your reasoning.\n",
     "\n",
     "Assign `linear` to `True` if a linear model is appropriate for describing the relationship, and `False` if it is not."
@@ -216,7 +224,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 5\n",
+    "\n",
     "Directly compute the standard deviation of the residuals from the Boston data.  Then compute the same quantity without using the residuals, using the formula described in section [15.6](https://www.inferentialthinking.com/chapters/15/6/numerical-diagnostics.html) instead."
    ]
   },
@@ -290,7 +300,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 6\n",
+    "\n",
     "Repeat the procedure from Question 5 to find the standard deviation of the residuals for the `old_faithful` dataset."
    ]
   },
@@ -728,7 +740,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-11T12:05:50.503658Z",
      "start_time": "2018-04-11T12:05:50.340244Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -773,7 +786,9 @@
     "We will use the method of confidence intervals to test this hypothesis.\n",
     "\n",
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 2\n",
+    "\n",
     "We'll warm up by implementing some familiar functions. You may use these functions throughout this assignment. Start by defining these two functions:\n",
     "\n",
     "1. `standard_units` should take in an array of numbers and return an array containing those numbers converted to standard units.\n",
@@ -806,7 +821,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-11T12:05:51.170309Z",
      "start_time": "2018-04-11T12:05:51.019905Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -819,7 +835,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 3\n",
+    "\n",
     "Using the functions you just implemented, create a function called `fit_line`.  It should take a table as its argument.  It should return an array containing the slope and intercept of the regression line that predicts the second column in the table using the first."
    ]
   },
@@ -831,6 +849,7 @@
      "end_time": "2018-04-11T12:05:51.332907Z",
      "start_time": "2018-04-11T12:05:51.325888Z"
     },
+    "collapsed": true,
     "for_assignment_type": "student"
    },
    "outputs": [],
@@ -853,7 +872,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-11T12:05:51.754766Z",
      "start_time": "2018-04-11T12:05:51.624390Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -875,6 +895,7 @@
      "end_time": "2018-04-11T12:05:51.916168Z",
      "start_time": "2018-04-11T12:05:51.777799Z"
     },
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -895,7 +916,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 4\n",
+    "\n",
     "Use the bootstrap to compute 1000 resamples from our dataset. For each resample, compute the slope of the best fit line. Put these slopes in an array called `resample_slopes`, giving you the empirical distribution of regression line slopes in resamples. Plot a histogram of these slopes."
    ]
   },
@@ -903,6 +926,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "for_assignment_type": "student"
    },
    "outputs": [],
@@ -915,7 +939,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 5\n",
+    "\n",
     "Use your resampled slopes to construct an approximate 95% confidence interval for the true value of the slope."
    ]
   },
@@ -926,7 +952,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-11T12:05:53.077324Z",
      "start_time": "2018-04-11T12:05:53.072310Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -938,7 +965,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_ = ok.grade('q3_5')\n",
@@ -950,7 +979,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 6\n",
+    "\n",
     "Based on your confidence interval, would you accept or reject the null hypothesis that the true slope is 0?  Why?  What P-value cutoff are you using?"
    ]
   },
@@ -982,7 +1013,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 7\n",
+    "\n",
     "Define the function `fitted_value`.  It should take 2 arguments:\n",
     "\n",
     "1. A table with 2 columns.  We'll be predicting the values in the second column using the first.\n",
@@ -1022,7 +1055,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-11T12:05:54.229924Z",
      "start_time": "2018-04-11T12:05:54.093546Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1035,7 +1069,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 8\n",
+    "\n",
     "The park ranger tells us that the most recent eruption lasted 5 minutes. Using your function above, assign the variable `five_minutes_wait` to the predicted wait time. "
    ]
   },
@@ -1046,7 +1082,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-11T12:05:54.430725Z",
      "start_time": "2018-04-11T12:05:54.424720Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1062,6 +1099,7 @@
      "end_time": "2018-04-11T12:05:54.734166Z",
      "start_time": "2018-04-11T12:05:54.591788Z"
     },
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1086,7 +1124,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 9\n",
+    "\n",
     "Define the function `bootstrap_lines`.  It should take two arguments:\n",
     "1. A table with two columns.  As usual, we'll be predicting the second column using the first.\n",
     "2. An integer, a number of bootstraps to run.\n",
@@ -1122,7 +1162,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 10\n",
+    "\n",
     "Create an array called `predictions_for_five`.  It should contain 1000 numbers.  Each number should be the predicted waiting time after an eruption with a duration of 5 minutes, using a different bootstrapped regression line. Hint: use `regression_lines` from the previous questions."
    ]
   },
@@ -1133,7 +1175,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-11T12:05:55.991855Z",
      "start_time": "2018-04-11T12:05:55.759236Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1149,7 +1192,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 11\n",
+    "\n",
     "Create a 95 percent confidence interval for these predictions."
    ]
   },
@@ -1161,6 +1206,7 @@
      "end_time": "2018-04-11T12:05:56.097136Z",
      "start_time": "2018-04-11T12:05:56.089117Z"
     },
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1174,7 +1220,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_ = ok.grade('q3_11')\n",
@@ -1186,7 +1234,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 12\n",
+    "\n",
     "Look at the scatter plot of the data at the start of this exercise. \n",
     "Determine which of the following are true, then set `question_12_choice` to your response. For example, if you think that 1 and 2 are true but 3 is false, you'd assign `question_12_choice` to be 4. \n",
     "\n",
