su18/hw/hw11.push

--- a/materials/su18/hw/hw11/hw11.ipynb
+++ b/materials/su18/hw/hw11/hw11.ipynb
@@ -184,7 +184,7 @@
     "\n",
     "#### Question 4\n",
     "\n",
-    "Does it seem like a linear model is appropriate for describing the relationship between crime and median home value? Explain your reasoning.\n",
+    "Does it seem like a linear model is appropriate for describing the relationship between crime and median home value?\n",
     "\n",
     "Assign `linear` to `True` if a linear model is appropriate for describing the relationship, and `False` if it is not."
    ]
