su18/hw/hw12.push

--- a/materials/su18/hw/hw12/hw12.ipynb
+++ b/materials/su18/hw/hw12/hw12.ipynb
@@ -77,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from IPython.lib.display import YouTubeVideo\n",
@@ -109,6 +111,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false
    },
    "outputs": [],
@@ -128,6 +131,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false
    },
    "outputs": [],
@@ -196,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_ = ok.grade('q1_1')"
@@ -281,13 +287,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_two_features = ...\n",
+    "train_two_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true,
     "deletable": false
    },
    "outputs": [],
    "source": [
-    "_ = ok.grade('q1_3')\n",
-    "_ = ok.backup()"
+    "_ = ok.grade('q1_3')_ = ok.backup()"
    ]
   },
   {
@@ -301,6 +318,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false
    },
    "outputs": [],
@@ -336,6 +354,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
     "manual_grade": true,
     "manual_problem_id": "sign_lang_2"
