su18/hw/hw12.push

--- a/materials/su18/hw/hw12/hw12.ipynb
+++ b/materials/su18/hw/hw12/hw12.ipynb
@@ -180,7 +180,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 1\n",
+    "\n",
     "Before we move on, check your understanding of the dataset.  Judging by the plot, is the first movement example a vertical motion, or a horizontal motion? If it is hard to tell, does it seem more likely to be vertical or horizontal? This is the kind of question a classifier has to answer.  Find out the right answer by looking at the `\"Movement type\"` column.  \n",
     "\n",
     "Assign `first_movement` to `1` if the movement was vertical, or `2` if the movement was horizontal."
@@ -225,7 +227,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 2\n",
+    "\n",
     "Create a table called `train_movements` and another table called `test_movements`.  `train_movements` should include the first $\\frac{11}{16}$ of the rows in `movements` (rounded to the nearest integer), and `test_movements` should include the remaining $\\frac{5}{16}$. \n",
     "\n",
     "Note that we do **not** mean the first 11 rows for the training test and rows 12-16 for the test set. We mean the first $\\frac{11}{16} = 68.75$% of the table should be for the the trianing set, and the rest should be for the test set. \n",
@@ -262,8 +266,7 @@
    },
    "outputs": [],
    "source": [
-    "_ = ok.grade('q1_2')\n",
-    "_ = ok.backup()"
+    "_ = ok.grade('q1_2')_ = ok.backup()"
    ]
   },
   {
@@ -279,7 +282,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 3\n",
+    "\n",
     "Make a table called `train_two_features` with only 3 columns: the first frame’s x coordinate and first frame’s y coordinate are our chosen features, as well as the movement type; only the examples in `train_movements`. "
    ]
   },
@@ -346,7 +351,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 4\n",
+    "\n",
     "In the cell below, create a table named `with_colors`.  It should have the same columns as the example table above, but with a row for each row in `train_two_features`. Then, create a scatter plot of your data."
    ]
   },
@@ -375,7 +382,9 @@
    "metadata": {},
    "source": [
     "<div class=\"hide\">\\pagebreak</div>\n",
+    "\n",
     "#### Question 5\n",
+    "\n",
     "Based on the scatter plot, how well will a nearest-neighbor classifier based on only these 2 features (the x- and y-coordinates of the hand position in the first frame) work?  Will it:\n",
     "\n",
     "1. distinguish almost perfectly between vertical and horizontal movements;\n",
