su18/hw/hw12.push

--- a/materials/su18/hw/hw12/hw12.ipynb
+++ b/materials/su18/hw/hw12/hw12.ipynb
@@ -266,7 +266,7 @@
    },
    "outputs": [],
    "source": [
-    "_ = ok.grade('q1_2')_ = ok.backup()"
+    "_ = ok.grade('q1_2')"
    ]
   },
   {
@@ -309,7 +309,7 @@
    },
    "outputs": [],
    "source": [
-    "_ = ok.grade('q1_3')_ = ok.backup()"
+    "_ = ok.grade('q1_3')"
    ]
   },
   {
