su18/hw/hw12.push

--- a/materials/su18/hw/hw12/hw12.ipynb
+++ b/materials/su18/hw/hw12/hw12.ipynb
@@ -467,7 +467,7 @@
     "#### Question 3\n",
     "You have a training set of 35 examples of characteristics of fruits along with what fruit is actually being described. 25 of the examples of Apples, and 10 of the examples are Oranges. \n",
     "\n",
-    "You decide to make a k-NN classifier. Assign `k_upper_bound` to the largest possible upper bound for k such that the classifier will predict Apple for every point, regardless of how the data is spread out.\n",
+    "You decide to make a k-NN classifier. Assign `k_lower_bound` to the smallest possible k such that the classifier will predict Apple for every point, regardless of how the data is spread out.\n",
     "\n",
     "Imagine that ties are broken at random for even values of k, so there is no guarantee of what will be picked if there is a tie. \n",
     "\n"
@@ -475,18 +475,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "k_upper_bound = ..."
+    "k_lower_bound = ..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
